# azure-kinect-for-python

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
azure_kinect/: device_manager.py  logic_body_manager.py  tracker_manager.py
azure_kinect/k4a/: __init__.py  calibration_wrapper.py  capture_wrapper.py  config_color_control.py  config_device.py  device_info.py  device_wrapper.py  image_wrapper.py  point_cloud.py  transformation_wrapper.py
azure_kinect/k4a_record/: __init__.py  config_record.py  record_wrapper.py
azure_kinect/k4abt/: __init__.py  base_body_wapper.py  base_joint_wapper.py  body_2d_wapper.py  body_3d_wapper.py  config_tracker.py  frame_wapper.py  joint_2d_wapper.py  joint_3d_wapper.py  joint_enum.py  logic_body.py  tracker_wapper.py
azure_kinect/util/: __init__.py  base_wapper.py  enum_utils.py  id_pool.py  libraries.py  logger.py  serializable_data.py  types.py  verify_result.py
docs/: installation_guide.md  set_folder_case_sensitive.md
